--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,29 @@
+body{
+    margin: 0px;
+    padding: 0px;
+}
+h1{
+    color: #fff;
+}
+p{
+    margin: 0.5rem 0.5rem;
+}
 .holiday{
     border-radius: 0.5rem;
     box-shadow: 0 0.5rem 0.7rem cadetblue;
     padding: 0.5rem 1rem;
     margin: 1rem;
+}
+
+.header{
+    background-image:url(images/12356.jpg);
+    background-repeat:no-repeat;
+    background-size: cover;
+    min-height: 10rem;
+    background-position: center bottom;
+    padding: 2rem;
+}
+#container{
+    padding: 2rem 2rem;
+   
 }
