--- a/public/style.css
+++ b/public/style.css
@@ -1,29 +1,66 @@
-body{
+body {
     margin: 0px;
     padding: 0px;
 }
-h1{
+
+h1 {
     color: #fff;
 }
-p{
+
+p {
     margin: 0.5rem 0.5rem;
 }
-.holiday{
+#selections{
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.holiday {
     border-radius: 0.5rem;
     box-shadow: 0 0.5rem 0.7rem cadetblue;
     padding: 0.5rem 1rem;
     margin: 1rem;
 }
 
-.header{
-    background-image:url(images/12356.jpg);
-    background-repeat:no-repeat;
+select {
+    background-color:  rgb(30, 78, 168);
+    color:#fff;
+    font-size: 16px;
+    padding: 10px;
+    border: 1px solid rgb(3, 34, 82);
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgb(3, 34, 82);
+    width: 200px;
+    height: 40px;
+  }
+   option {
+    background-color: rgb(30, 78, 168);
+    color:#fff;
+    font-size: 16px;
+    margin: 5px;
+  }
+
+ 
+  option:hover,
+  option:selected {
+    background-color: rgb(4, 28, 63);
+    color: #fff;
+  }
+  
+.header {
+    background-image: url(images/12356.jpg);
+    background-repeat: no-repeat;
     background-size: cover;
     min-height: 10rem;
     background-position: center bottom;
     padding: 2rem;
 }
-#container{
+
+#container {
     padding: 2rem 2rem;
-   
+
 }
