added classes for tabs

--- a/public/style.css
+++ b/public/style.css
@@ -6,15 +6,18 @@ body {
 h1 {
     color: #fff;
 }
+
 h2 {
-    color:  rgb(30, 78, 168);
+    color: rgb(30, 78, 168);
     margin-left: 1rem;
 }
+
 p {
     margin: 0.5rem 0.5rem;
     font-size: 18px;
 }
-#selections{
+
+#selections {
     padding: 2rem;
     display: flex;
     align-items: center;
@@ -31,8 +34,8 @@ p {
 }
 
 select {
-    background-color:  rgb(30, 78, 168);
-    color:#fff;
+    background-color: rgb(30, 78, 168);
+    color: #fff;
     font-size: 16px;
     padding: 10px;
     border: 1px solid rgb(3, 34, 82);
@@ -40,20 +43,20 @@ select {
     box-shadow: 0 2px 4px rgb(3, 34, 82);
     width: 200px;
     height: 40px;
-  }
-   option {
-    background-color: rgb(30, 78, 168);
-    color:#fff;
-    font-size: 16px;
-  }
+}
 
- 
-  option:hover,
-  option:selected {
+option {
+    background-color: rgb(30, 78, 168);
+    color: #fff;
+    font-size: 16px;
+}
+
+option:hover,
+option:selected {
     background-color: rgb(4, 28, 63);
     color: #fff;
-  }
-  
+}
+
 .header {
     background-image: url(images/12356.jpg);
     background-repeat: no-repeat;
@@ -68,3 +71,48 @@ select {
     padding: 2rem 2rem;
 
 }
+
+/* Style the tab */ 
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+  }
+  
+  /* Style the buttons that are used to open the tab content */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #ccc;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+  }
+  .tabcontent {
+    animation: fadeEffect 1s; /* Fading effect takes 1 second */
+  }
+  
+  /* Go from zero to full opacity */
+  @keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
