--- a/public/style.css
+++ b/public/style.css
@@ -78,6 +78,7 @@ option:selected {
 
 }
 
+/* quoting  from  https://www.w3schools.com/howto/howto_js_tabs.asp */
 /* Style the tab */ 
 .tab {
     overflow: hidden;
